--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,95 @@
+2009-07-28  Martin Maechler  <maechler@stat.math.ethz.ch>
+
+	* R/spModels.R (contr.sum): need also to define contr.*() as long
+	as we document (./man/) them.
+
+2009-07-27  Martin Maechler  <maechler@stat.math.ethz.ch>
+
+	* DESCRIPTION (Version): 0.999375-30, CRAN-released: 2009-0...
+
+	* R/Matrix.R (all.equal_Mat): add factorsCheck=FALSE argument
+	* R/Auxiliaries.R (attr.all_Mat, attrSlots): ditto
+
+2009-07-25  Martin Maechler  <maechler@stat.math.ethz.ch>
+
+	* R/Auxiliaries.R (attr.all_Mat): fix checking of non-content slots.
+	* R/Matrix.R (all.equal_Mat): thinko needed  s/&&/&/
+	* R/sparseMatrix.R (all.equal(.) methods): ditto
+	===> Note:  all.equal() is more stringent for "Matrix" arguments now!
+
+2009-07-23  Martin Maechler  <maechler@stat.math.ethz.ch>
+
+	* R/spModels.R (model.spmatrix, sparse2int): "complete" re-write
+
+	* tests/spModel.matrix.R: many tests added
+
+2009-07-20  Martin Maechler  <maechler@stat.math.ethz.ch>
+
+	* src/chm_common.c (R_cholmod_l_start): set print_function to NULL,
+	as we have long suggested ==> get rid of random strings seen in
+	some cholmod warnings.
+	(R_cholmod_error): call cholmod_l_defaults() before error(), so
+	we restore the Cholmod global in case of errors.
+
+	* R/ldenseMatrix.R (.rcond_via_d): fix thinko
+
+2009-07-18  Martin Maechler  <maechler@stat.math.ethz.ch>
+
+	* R/CHMfactor.R (isLDL): need a "!" as 'type' is "is_ll"
+	* src/dsCMatrix.c (dsCMatrix_Cholesky): update, notably when caching.
+
+	* tests/indexing.R: test col.names printing of sparseMatrix
+
+2009-07-16  Martin Maechler  <maechler@stat.math.ethz.ch>
+
+	* inst/test-tools.R (allCholesky): new testing function
+
+2009-07-15  Martin Maechler  <maechler@stat.math.ethz.ch>
+
+	* src/dsCMatrix.c (dsCMatrix_Cholesky): add possibility to set each
+	of 'perm', 'LDL', and 'super' to NA (in addition to TRUE / FALSE).
+	in these case, a CHOLMOD-heuristic choses the option "sensibly".
+	* man/Cholesky.Rd: document the new possibility.
+
+2009-07-14  Martin Maechler  <maechler@stat.math.ethz.ch>
+
+	* R/rankMatrix.R (rankMatrix): diff(sval) <= 0
+
+	* R/spModels.R (model.spmatrix): fix case of missing main effect
+	* tests/spModel.matrix.R: new file
+
+2009-07-11  Martin Maechler  <maechler@stat.math.ethz.ch>
+
+	* R/sparseMatrix.R (show, printSpMatrix2): both print() and show()
+	now use printSpMatrix2(), and that now already prints
+	"<n> x <m> sparse Matrix of class ...".
+
+	* R/CHMfactor.R (isLDL): fix and
+	* NAMESPACE: export  isLDL()
+
+2009-07-10  Martin Maechler  <maechler@stat.math.ethz.ch>
+
+	* R/spModels.R (model.spmatrix): mf may be simple data.frame
+
+2009-07-09  Martin Maechler  <maechler@stat.math.ethz.ch>
+
+	* NAMESPACE: export sparse.model.matrix() and
+	* man/sparse.model.matrix.Rd: document it
+
+2009-07-08  Martin Maechler  <maechler@stat.math.ethz.ch>
+
+	* R/Tsparse.R (intI): also work for integer dimnames (well ..)
+
+2009-07-07  Martin Maechler  <maechler@stat.math.ethz.ch>
+
+	* R/sparseMatrix.R: "factor out" sparse model things into
+
+	* R/spModels.R (sparse.model.matrix): new model matrix functions
+
+2009-06-20  Douglas Bates <bates@stat.wisc.edu>
+
+	* src/CHMfactor.c: Ensure updated LL stays LL
+
 2009-06-10  Douglas Bates <bates@stat.wisc.edu>
 
 	* [r2404] src/Mutils.c: Change value of set_factor to be the cached factor
